# AssemblyPlanFromObservation

./: APO_Recognition_sample.cpp  CMakeLists.txt  ContactCalculator.cpp  ContactCalculator.h  ContactElement.cpp  ContactElement.h  ContactState.cpp  ContactState.h  ContactStateForDisplacement.cpp  ContactStateForDisplacement.h  DisplacementIndex.cpp  DisplacementIndex.h  InfinitesimulDisplacement.cpp  InfinitesimulDisplacement.h  MotionGenerator.cpp  MotionGenerator.h  PoseListFileHandler.cpp  PoseListFileHandler.h  README.md  Shape.cpp  Shape.h  ShapeParser.cpp  ShapeParser.h  TaskAnalyzer.cpp  TaskAnalyzer.h  VisionErrorCorrector.cpp  VisionErrorCorrector.h  analyze_task.cpp  generate_motion.cpp  init.pose.list  random_pose_generation.cpp  vision_error_correction.cpp
